--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 11),
                golang-github-codegangsta-negroni-dev,
                golang-github-gorilla-mux-dev,
                golang-github-stretchr-testify-dev
-Standards-Version: 4.2.1
+Standards-Version: 4.3.0
 Homepage: https://github.com/sebest/xff
 Vcs-Browser: https://salsa.debian.org/go-team/packages/golang-github-sebest-xff
 Vcs-Git: https://salsa.debian.org/go-team/packages/golang-github-sebest-xff.git
@@ -19,6 +19,7 @@ Testsuite: autopkgtest-pkg-go
 Package: golang-github-sebest-xff
 Architecture: any
 Depends: ${misc:Depends},
+         ${shlibs:Depends},
          golang-github-codegangsta-negroni-dev,
          golang-github-gorilla-mux-dev,
          golang-github-stretchr-testify-dev
